tests/ui/opaque_autotraits.stderr
error[E0277]: `*const cxx::void` cannot be sent between threads safely
  --> $DIR/opaque_autotraits.rs:13:5
   |
8  | fn assert_send<T: Send>() {}
   |                   ---- required by this bound in `assert_send`
...
13 |     assert_send::<ffi::Opaque>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const cxx::void` cannot be sent between threads safely
   |
   = help: within `ffi::Opaque`, the trait `Send` is not implemented for `*const cxx::void`
   = note: required because it appears within the type `[*const cxx::void; 0]`
   = note: required because it appears within the type `cxx::private::Opaque`
note: required because it appears within the type `ffi::Opaque`
  --> $DIR/opaque_autotraits.rs:4:14
   |
4  |         type Opaque;
   |              ^^^^^^

error[E0277]: `*const cxx::void` cannot be shared between threads safely
  --> $DIR/opaque_autotraits.rs:14:5
   |
9  | fn assert_sync<T: Sync>() {}
   |                   ---- required by this bound in `assert_sync`
...
14 |     assert_sync::<ffi::Opaque>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const cxx::void` cannot be shared between threads safely
   |
   = help: within `ffi::Opaque`, the trait `Sync` is not implemented for `*const cxx::void`
   = note: required because it appears within the type `[*const cxx::void; 0]`
   = note: required because it appears within the type `cxx::private::Opaque`
note: required because it appears within the type `ffi::Opaque`
  --> $DIR/opaque_autotraits.rs:4:14
   |
4  |         type Opaque;
   |              ^^^^^^

error[E0277]: `PhantomPinned` cannot be unpinned
  --> $DIR/opaque_autotraits.rs:15:5
   |
10 | fn assert_unpin<T: Unpin>() {}
   |                    ----- required by this bound in `assert_unpin`
...
15 |     assert_unpin::<ffi::Opaque>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ within `ffi::Opaque`, the trait `Unpin` is not implemented for `PhantomPinned`
   |
   = note: consider using `Box::pin`
   = note: required because it appears within the type `PhantomData<PhantomPinned>`
   = note: required because it appears within the type `cxx::private::Opaque`
note: required because it appears within the type `ffi::Opaque`
  --> $DIR/opaque_autotraits.rs:4:14
   |
4  |         type Opaque;
   |              ^^^^^^
